# ourBookShelf

./: .gitattributes  .gitignore  README.md
rusty-book-shelf/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
rusty-book-shelf/.cargo/: config.toml
rusty-book-shelf/.github/workflows/: ci.yaml
rusty-book-shelf/adapter/: Cargo.toml
rusty-book-shelf/adapter/migrations/: 20241106214433_start.down.sql  20241106214433_start.up.sql
rusty-book-shelf/adapter/src/: lib.rs
rusty-book-shelf/adapter/src/database/: mod.rs
rusty-book-shelf/adapter/src/redis/: mod.rs  model.rs
rusty-book-shelf/adapter/src/repository/: auth.rs  book.rs  checkout.rs  diagnostic message [0]  health.rs  user.rs
rusty-book-shelf/api/: Cargo.toml
rusty-book-shelf/api/src/: extractor.rs  lib.rs  openapi.rs
rusty-book-shelf/api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
rusty-book-shelf/api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
rusty-book-shelf/api/src/route/: book.rs  health.rs  user.rs  v1.rs
rusty-book-shelf/api/tests/api/: book.rs  helper.rs
rusty-book-shelf/data/: initial_setup.sql
rusty-book-shelf/kernel/src/model/: id.rs  list.rs  mod.rs
rusty-book-shelf/registry/: Cargo.toml
rusty-book-shelf/registry/src/: lib.rs
rusty-book-shelf/shared/: env.rs
rusty-book-shelf/shared/src/: config.rs  env.rs  error.rs  lib.rs
rusty-book-shelf/sqlx-test-example/: Cargo.toml
rusty-book-shelf/sqlx-test-example/migrations/: 20241211051821_setup.sql
rusty-book-shelf/sqlx-test-example/src/: lib.rs
rusty-book-shelf/src/: main.rs
(+27 files in other folders)
