[[bin]]
name = "app"
path = "src/main.rs"

[package]
name = "rusty-book-shelf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
rstest = "0.23.0"
