[package]
name = "rusty-book-shelf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.92"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.40.0", features = ["full"] }
derive-new = "0.7.0"
rstest = "0.21.0"
async-trait = "0.1.74"
uuid = { version = "1.9.0", features = ["v4", "serde"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.44"

[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true


